[package]
authors = ['Dock.io']
edition = '2018'
name = 'dock-runtime'
version = '0.19.0'
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
static_assertions = "1.1.0"
smallvec = "1.4.1"
evm = { version = '0.27.0', default-features = false, features = ['with-codec'] }
log = { version = "0.4.14", default-features = false }

[dependencies.pallet-babe]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.rand]
version = '0.8.3'
optional = true

[dependencies.frame-executive]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-support]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.grandpa]
default-features = false
package = 'pallet-grandpa'
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.serde-big-array]
optional = true
version = "0.3.0"

[dependencies.sp-api]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-block-builder]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-consensus-babe]
default-features = false
version = '0.9.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-core]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"
features = ["full_crypto"]

[dependencies.sp-inherents]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-io]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-offchain]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-runtime]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-session]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-std]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-transaction-pool]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-npos-elections]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-version]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-arithmetic]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-authority-discovery]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-staking]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-system]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-wasm-interface]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[build-dependencies.substrate-wasm-builder]
version = '4.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-session]
default_features = false
features = ['historical']
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-sudo]
default_features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-authorship]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-utility]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-benchmarking]
optional = true
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.frame-system-benchmarking]
optional = true
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-collective]
default-features = false
version = '3.0.0'
git = "https://github.com/docknetwork/substrate.git"
branch = "frontier"

[dependencies.pallet-membership]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-scheduler]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-authority-discovery]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-runtime-interface]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-im-online]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-identity]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-offences]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-staking]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-staking-reward-curve]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.sp-application-crypto]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"
features = ["full_crypto"]

[dependencies.pallet-election-provider-multi-phase]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-treasury]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-bounties]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-tips]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-democracy]
default-features = false
version = '3.0.0'
git = "https://github.com/paritytech/substrate.git"
branch = "frontier"

[dependencies.pallet-elections-phragmen]
default-features = false
version = '3.0.0'
git = "https://github.com/docknetwork/substrate.git"
branch = "frontier"

[dependencies.hex-literal]
version = "0.3.1"
optional = true

[dependencies.pallet-evm]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/frame/evm'

[dependencies.pallet-ethereum]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/frame/ethereum'

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'

[dependencies.pallet-evm-precompile-ed25519]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'

[dependencies.pallet-evm-precompile-bn128]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'

[dependencies.pallet-evm-precompile-dispatch]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'

[dependencies.fp-rpc]
default-features = false
git = 'https://github.com/paritytech/frontier.git'
rev = '5ced70c1b295b440941fa8b6653d40b34f59c4d3'
#path = '../../../frontier/primitives/rpc'

[dependencies.poa]
default-features = false
path = '../pallets/poa'
version = '0.8.0'

[dependencies.token_migration]
default-features = false
path = '../pallets/token_migration'
version = '0.1.2'

[dependencies.core_mods]
default-features = false
path = '../pallets/core_mods'
version = '0.5.0'

[dependencies.price_feed]
default-features = false
path = '../pallets/price_feed'
version = '0.0.1'

[dependencies.fiat_filter]
default-features = false
path = '../pallets/fiat_filter'
version = '0.1.0'

[dependencies.fiat_filter_rpc_runtime_api]
default-features = false
path = '../pallets/fiat_filter/rpc/runtime_api'
version = '0.0.1'

[dependencies.common]
path = '../common'
version = '0.0.1'

[dependencies.staking_rewards]
default-features = false
path = '../pallets/staking_rewards'
version = '0.2.0'

[dev-dependencies.getrandom]
version = "0.2"
features = ["js"]
default-features = false

#[dependencies.getrandom]
#default-features = false
#package = "getrandom"
#version = "0.1.16"
# features = ["js"]
#optional = true

#[dependencies.schnorrkel]
#version = "0.9.1"
#default-features = false

#[dependencies.rand_core]
#version = "0.5.1"
#default-features = false
#features = ["getrandom"]

[features]
default = ['std']
std = [
    'pallet-babe/std',
    'balances/std',
    'codec/std',
    'log/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'serde',
    #'schnorrkel/std',
    #"schnorrkel/u64_backend",
    #"schnorrkel/rand",
    #"schnorrkel/getrandom",
    'serde-big-array',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-authority-discovery/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-core/full_crypto',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sp-arithmetic/std',
    'sp-staking/std',
    'frame-system/std',
    'sp-npos-elections/std',
    'sp-runtime-interface/std',
    'frame-system-rpc-runtime-api/std',
    'timestamp/std',
    'sp-wasm-interface/std',
    'transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-session/std',
    'pallet-scheduler/std',
    'pallet-sudo/std',
    'pallet-authorship/std',
    'pallet-utility/std',
    'pallet-membership/std',
    'pallet-collective/std',
    'pallet-offences/std',
    'pallet-authority-discovery/std',
    'pallet-im-online/std',
    'pallet-identity/std',
    'pallet-staking/std',
    'pallet-election-provider-multi-phase/std',
    'pallet-treasury/std',
    'pallet-bounties/std',
    'pallet-tips/std',
    'pallet-democracy/std',
    'pallet-elections-phragmen/std',
    'evm/std',
    'evm/with-serde',
    'pallet-evm/std',
    'pallet-ethereum/std',
    'pallet-evm-precompile-simple/std',
    'pallet-evm-precompile-sha3fips/std',
    'pallet-evm-precompile-ed25519/std',
    'pallet-evm-precompile-modexp/std',
    'pallet-evm-precompile-bn128/std',
    'pallet-evm-precompile-dispatch/std',
    'poa/std',
    'token_migration/std',
    'core_mods/std',
    'price_feed/std',
    'fiat_filter/std',
    #'fiat_filter_rpc_runtime_api/std',
    'staking_rewards/std',
    'getrandom/std',
]
runtime-benchmarks = [
  'frame-benchmarking',
  'frame-support/runtime-benchmarks',
  'frame-system/runtime-benchmarks',
  'sp-runtime/runtime-benchmarks',
  'balances/runtime-benchmarks',
  # 'frame-system-benchmarking',
  'token_migration/runtime-benchmarks',
  'core_mods/runtime-benchmarks',
  'pallet-collective/runtime-benchmarks',
  # 'sp-application-crypto/full_crypto',
  'sp-core/full_crypto',
  'hex-literal',
  #"schnorrkel/getrandom",
  #'schnorrkel/wasm-bindgen',
]

# For building testnet, affects spec name and ss58 prefix
testnet = []
# For building mainnet, affects spec name and ss58 prefix
mainnet = []
# For building test nodes with small durations for staking, elections, voting, etc
small_durations = []
# Faster block production. Not recommended for production
fastblock = []

[dev-dependencies]
rand = '0.8.3'
hex = '0.4.2'