[package]
authors = ["Dock.io"]
edition = "2021"
name = "dock-runtime"
version = "0.21.0"
license = "Apache-2.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rustc-hex = { version = "2.1.0", default-features = false }
ethabi = { git = "https://github.com/snowfork/ethabi-decode.git", package = "ethabi-decode", branch = "master", default-features = false }
parity-bytes = { version = "0.1.2", default-features = false }
ethbloom = { version = "0.12.1", default-features = false }
ethereum = { version = "0.12.0", default-features = false, features = ["with-codec"] }
ethereum-types = { version = "0.13.1", default-features = false, features = ["codec", "rlp", "serialize"] }
primitive-types = { version = "0.11.1", default-features = false, features = ["rlp", "byteorder"] }

evm = { git = "https://github.com/rust-blockchain/evm", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c", default-features = false, features = ["with-codec"] }
evm-runtime = { version = "0.35", default-features = false, git = "https://github.com/rust-blockchain/evm.git", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c" }
evm-gasometer = { version = "0.35", default-features = false, git = "https://github.com/rust-blockchain/evm.git", rev = "51b8c2ce3104265e1fd5bb0fe5cdfd2e0938239c" }

pallet-assets = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.28", default-features = false, optional = true }

parity-util-mem = { version = "0.11", optional = true }

rlp = { version = "0.5", default-features = false }
sha3 = { version = "0.8", default-features = false }
log = { version = "0.4", default-features = false }

ethash = { git = "https://github.com/snowfork/ethash.git", branch = "master", default-features = false }
static_assertions = "1.1.0"
pallet-base-fee = { git = "https://github.com/docknetwork/frontier.git", rev = "d96b102e516140c89db4ace04319b339414899ec", default_features = false }
smallvec = "1.4.1"
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
getrandom = { version = "0.2", features = ["js"] }
hex = { version = "0.4", default-features = false }

[dependencies.pallet-babe]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-beefy]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.beefy-primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.beefy-merkle-tree]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.balances]
default-features = false
package = "pallet-balances"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-beefy-mmr]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "3.1.5"

[dependencies.frame-executive]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.grandpa]
default-features = false
package = "pallet-grandpa"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.serde]
features = ["derive"]
optional = true
version = "1.0.119"

[dependencies.serde-big-array]
optional = true
version = "0.3.0"

[dependencies.sp-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-block-builder]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-consensus-babe]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.fp-consensus]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"

[dependencies.sp-inherents]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-trie]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-offchain]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-session]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-election-provider-support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-transaction-pool]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-transaction-storage-proof]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-version]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-consensus-slots]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-consensus-vrf]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-authority-discovery]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-authorship]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-staking]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-application-crypto]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.timestamp]
default-features = false
package = "pallet-timestamp"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.transaction-payment]
default-features = false
package = "pallet-transaction-payment"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

#[dependencies.pallet-transaction-payment-rpc]
#default-features = false
#git = "https://github.com/paritytech/substrate.git"
#branch = "polkadot-v0.9.28"

[build-dependencies.substrate-wasm-builder]
package = "substrate-wasm-builder"
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-session]
default_features = false
features = ["historical"]
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-sudo]
default_features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-authorship]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-utility]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-benchmarking]
optional = true
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.frame-system-benchmarking]
optional = true
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-collective]
default-features = false
git = "https://github.com/docknetwork/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-membership]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-scheduler]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-authority-discovery]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-im-online]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-identity]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-tasks]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-offences]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-staking]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-staking-reward-curve]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-election-provider-multi-phase]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-treasury]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-bounties]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

#[dependencies.sc-executor]
# default-features = false
#git = "https://github.com/paritytech/substrate.git"
#branch = "polkadot-v0.9.28"

#[dependencies.sp-keyring]
#default-features = false
#git = "https://github.com/paritytech/substrate.git"
#branch = "polkadot-v0.9.28"

[dependencies.pallet-tips]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-mmr]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-democracy]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.pallet-elections-phragmen]
default-features = false
git = "https://github.com/docknetwork/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.hex-literal]
version = "0.3.4"
default-features = false

[dependencies.pallet-evm]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm"

[dependencies.pallet-ethereum]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/ethereum"

[dependencies.pallet-evm-precompile-storage-reader]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../../../../frontier/frame/evm/precompile/storage-reader"

[dependencies.pallet-evm-precompile-simple]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm/precompile/simple"

[dependencies.pallet-evm-precompile-sha3fips]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm/precompile/sha3fips"

[dependencies.pallet-evm-precompile-ed25519]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm/precompile/ed25519"

[dependencies.pallet-evm-precompile-modexp]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm/precompile/modexp"

[dependencies.pallet-evm-precompile-bn128]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm/precompile/bn128"

[dependencies.pallet-evm-precompile-dispatch]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/frame/evm/precompile/dispatch"

[dependencies.fp-rpc]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/primitives/rpc"

[dependencies.fp-storage]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/primitives/storage"

[dependencies.poa]
default-features = false
path = "../pallets/poa"

[dependencies.token_migration]
default-features = false
path = "../pallets/token_migration"

[dependencies.core_mods]
default-features = false
path = "../pallets/core_mods"

[dependencies.price_feed]
default-features = false
path = "../pallets/price_feed"

[dependencies.fiat_filter]
default-features = false
path = "../pallets/fiat_filter"

[dependencies.fiat_filter_rpc_runtime_api]
default-features = false
path = "../pallets/fiat_filter/rpc/runtime_api"

[dependencies.common]
path = "../common"
default-features = false

[dependencies.libsecp256k1]
version = "0.7"
default-features = false
features = []

[dependencies.staking_rewards]
default-features = false
path = "../pallets/staking_rewards"

[dependencies.sp-npos-elections]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-state-machine]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-finality-grandpa]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.fp-self-contained]
default-features = false
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
# path = "../frontier/primitives/self-contained"

[dependencies.sp-runtime-interface]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.fp-evm]
git = "https://github.com/docknetwork/frontier.git"
rev = "d96b102e516140c89db4ace04319b339414899ec"
default-features = false
# path = "../frontier/primitives/evm"

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[dependencies.sp-mmr-primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
branch = "polkadot-v0.9.28"

[features]
default = ["std"]
std = [
    "pallet-babe/std",
    "balances/std",
    "sp-consensus-vrf/std",
    "codec/std",
    "log/std",
    "pallet-mmr/std",
    "pallet-beefy/std",
    "pallet-beefy-mmr/std",
    "sp-mmr-primitives/std",
    "beefy-primitives/std",
    "beefy-merkle-tree/std",
    "frame-executive/std",
    "frame-support/std",
    "grandpa/std",
    "serde",
    "fp-self-contained/std",
    "fp-rpc/std",
    "serde-big-array",
    "sp-api/std",
    "libsecp256k1/std",
    "sp-block-builder/std",
    "sp-authority-discovery/std",
    "sp-consensus-babe/std",
    "sp-core/std",
    "sp-inherents/std",

  	"evm/std",
    "evm/with-serde",
    "evm-runtime/std",
    "evm-gasometer/std",
    "rlp/std",

    "log/std",
	  "hex/std",
    "sha3/std",  
  
    "pallet-assets/std",
    "sp-runtime-interface/std",
    "sp-trie/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    # "sp-keyring/std",
    "sp-session/std",
    "sp-std/std",
    "sp-tasks/std",
    #"sc-executor/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "frame-election-provider-support/std",
    "sp-transaction-pool/std",
    "sp-transaction-storage-proof/std",
    "sp-version/std",
    "fp-storage/std",
    # "fp-consensus/std",
    # "eth_bridge/std",
    "sp-npos-elections/std",
    "sp-finality-grandpa/std",
    "sp-state-machine/std",
    "sp-arithmetic/std",
    "sp-staking/std",
  
  
  
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",
    "timestamp/std",
    "transaction-payment/std",
    "scale-info/std",

    "hex/std",

    "pallet-session/std",
    "pallet-scheduler/std",
    "sp-authorship/std",
    "pallet-sudo/std",
    "sp-consensus-slots/std",
    "pallet-authorship/std",
  
    "pallet-randomness-collective-flip/std",
  
    "ethereum/std",
    "ethereum-types/std",
    "ethash/std",
    "serde/std",
    "ethabi/std",
    "ethbloom/std",
    "pallet-utility/std",
    "parity-util-mem",
    "pallet-membership/std",
    "pallet-collective/std",
    "pallet-offences/std",
    "pallet-authority-discovery/std",
    "pallet-im-online/std",
    "pallet-identity/std",
    "sp-application-crypto/std",
    "pallet-staking/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-treasury/std",
    "pallet-bounties/std",
    "pallet-tips/std",
    "pallet-democracy/std",
    "pallet-elections-phragmen/std",
    "evm/std",
    "evm/with-serde",
    "pallet-evm/std",
    "pallet-ethereum/std",
    "parity-bytes/std",
    "pallet-evm-precompile-storage-reader/std",
    "pallet-evm-precompile-simple/std",
    "pallet-evm-precompile-sha3fips/std",
    "pallet-evm-precompile-ed25519/std",
    "pallet-evm-precompile-modexp/std",
    "pallet-evm-precompile-bn128/std",
    "pallet-evm-precompile-dispatch/std",
    "poa/std",
    "token_migration/std",
    "core_mods/std",
    "price_feed/std",
    "fiat_filter/std",
    "pallet-base-fee/std",
    "fiat_filter_rpc_runtime_api/std",
    "staking_rewards/std",
    "frame-benchmarking/std",
    "rustc-hex/std"
]
runtime-benchmarks = [
  "frame-benchmarking",
  "pallet-collective/runtime-benchmarks",
  "pallet-evm/runtime-benchmarks",
  "pallet-ethereum/runtime-benchmarks",

  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "sp-runtime/runtime-benchmarks",
  "balances/runtime-benchmarks",
  "frame-system-benchmarking",
  "token_migration/runtime-benchmarks",
  "core_mods/runtime-benchmarks",
]

# For building testnet, affects spec name and ss58 prefix
testnet = []
# For building testnet, affects spec name and ss58 prefix
devnet = []
# For building mainnet, affects spec name and ss58 prefix
mainnet = []
# For building test nodes with small durations for staking, elections, voting, etc
small_durations = []
# Faster block production. Not recommended for production
fastblock = []
# Benchmarks-only
benchmarks-only = []

[dev-dependencies]
rand = "0.8.3"
hex = "0.4.2"